FEAT: add instruction image
